<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forget_password">FORGOT PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="i_don_t_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
    <string name="full_name">Full Name</string>
    <string name="mobild_no">Mobild No.</string>
    <string name="i_have_an_account">I HAVE AN ACCOUNT</string>
    <string name="register">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="specifications">Specifications</string>
    <string name="user_reviews">User Reviews</string>
    <string name="_1">1</string>
    <string name="decrement">—</string>
    <string name="increment">+</string>
    <string name="unit_price">Unit Price</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="cart_is_empty">Cart is empty!</string>
    <string name="next">NEXT</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_option">Payment Option</string>
    <string name="cart_items">Cart Items</string>
    <string name="confirm_amp_place_order"><![CDATA[CONFIRM & PLACE ORDER]]></string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="internet_banking">Internet Banking</string>
    <string name="debit_card_credit_card">Debit Card / Credit Card</string>
    <string name="pay_pal">Pay Pal</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_title">Address Title</string>
    <string name="address">Address</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="order_id">Order ID</string>
    <string name="order_status">Order status</string>
    <string name="purchased_item">Purchased Item</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="bill">Bill</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_date">Order Date</string>
    <string name="no_orders_placed">No Orders Placed</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="no_reviews_on_this_item_yet">No reviews on this item yet!</string>
    <string name="super_cart">Super Cart</string>
    <string name="welcome">Welcome</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="no_address_in_your_database_n_please_add_your_address">No Address in your database! \n Please add your address</string>
</resources>