<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_30dp"
    tools:context=".view.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_cart"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/text_email"
        android:text="@string/email_id"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintTop_toBottomOf="@id/img_cart"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_email_id"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/background_edit_text"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_password"
        android:text="@string/password"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintTop_toBottomOf="@id/edit_email_id"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/background_edit_text"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/_10dp"
        android:id="@+id/text_forgot_password"
        android:text="@string/forget_password"
        android:textColor="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:backgroundTint="@color/main_sky_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_forgot_password"
        app:layout_constraintBottom_toTopOf="@id/text_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_no_account"
        android:text="@string/i_don_t_have_an_account"
        android:textColor="@color/light_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>