<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_address"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_title"
            android:textSize="@dimen/_15sp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_address_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_20dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/text_address_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/_15sp"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_address_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120dp"
            android:paddingHorizontal="@dimen/_20dp"
            android:background="@drawable/background_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_address" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_address_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/main_sky_blue"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_add_address_save"
            app:layout_constraintTop_toBottomOf="@+id/edit_address" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_address_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/main_sky_blue"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintStart_toEndOf="@id/btn_add_address_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>