<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_30dp"
    tools:context=".view.activity.RegistrationActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        android:text="@string/full_name"
        android:textSize="@dimen/_17sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_name"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        android:background="@drawable/background_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_mobile"
        android:text="@string/mobild_no"
        android:textSize="@dimen/_17sp"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_mobile"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        app:layout_constraintTop_toBottomOf="@id/text_mobile"
        android:background="@drawable/background_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_email"
        android:text="@string/email_id"
        android:layout_marginTop="@dimen/_20dp"
        android:textSize="@dimen/_17sp"
        app:layout_constraintTop_toBottomOf="@id/edit_mobile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email_id"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        android:background="@drawable/background_edit_text"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_password"
        android:text="@string/password"
        android:textSize="@dimen/_17sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_email_id"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:paddingHorizontal="@dimen/_15dp"
        android:background="@drawable/background_edit_text"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        tools:layout_editor_absoluteX="56dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:backgroundTint="@color/main_sky_blue"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_have_account"
        android:text="@string/i_have_an_account"
        android:textSize="@dimen/_17sp"
        android:textColor="@color/light_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_120dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/white"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="@dimen/_120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/light_orange"
        app:trackThickness="@dimen/_20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>