<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16dp"
    tools:context=".view.fragment.DeliveryFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:text="@string/select_delivery_address"
        android:textSize="@dimen/_30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_product"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        android:layout_marginTop="@dimen/_15dp"
        tools:listitem="@layout/item_delivery_address"
        tools:itemCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_address"
        android:text="@string/add_address"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:text="@string/next"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_add_address"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>