<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/background_gray_boundary"
        android:layout_marginBottom="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_order_id"
            tools:text="Order # 1"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_20sp"
            android:gravity="center"
            android:drawableStart="@drawable/ic_baseline_local_shipping_24"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableLayout
            app:layout_constraintTop_toBottomOf="@id/text_order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:layout_marginTop="@dimen/_5dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_weight="1"
                    android:text="@string/delivery_address"/>

                <androidx.appcompat.widget.AppCompatTextView
                    tools:text="Home"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_weight="1"
                    android:id="@+id/text_address"/>
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/_5dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_weight="1"
                    android:text="@string/bill"/>

                <androidx.appcompat.widget.AppCompatTextView
                    tools:text="$ 1695"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_weight="1"
                    android:id="@+id/text_bill"/>
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/_5dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_weight="1"
                    android:text="@string/status"/>

                <androidx.appcompat.widget.AppCompatTextView
                    tools:text="Received"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_weight="1"
                    android:id="@+id/text_status"/>
            </TableRow>


            <TableRow android:layout_marginTop="@dimen/_5dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_weight="1"
                    android:text="@string/order_date"/>

                <androidx.appcompat.widget.AppCompatTextView
                    tools:text="2022-01-16 23:45:34"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    android:layout_weight="1"
                    android:id="@+id/text_date"/>
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>