<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.CartFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bill_amount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_price"
        tools:text="$ 640"
        android:textSize="@dimen/_30sp"
        android:textColor="@color/light_orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_no_item"
        android:textSize="@dimen/_20sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cart_is_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_product"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        android:layout_marginTop="@dimen/_15dp"
        tools:listitem="@layout/item_cart_product"
        tools:itemCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_checkout"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:backgroundTint="@color/main_sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>