<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16dp"
    tools:context=".view.fragment.SummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_cart_items"
            android:text="@string/cart_items"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_product"
            app:layout_constraintTop_toBottomOf="@id/text_cart_items"
            android:layout_marginTop="@dimen/_15dp"
            tools:listitem="@layout/item_checkout_cart_items"
            tools:itemCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_total_bill_amount"
            android:text="@string/total_bill_amount"
            android:textSize="@dimen/_25sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_product"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_price"
            tools:text="$ 640"
            android:textColor="@color/light_orange"
            android:textSize="@dimen/_25sp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_delivery_address"
            android:text="@string/delivery_address"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/text_total_bill_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/text_delivery_address"
            android:background="@drawable/background_gray_boundary"
            android:padding="@dimen/_10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_address_name"
                tools:text="HOME"
                android:textSize="@dimen/_15sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:textColor="#535353"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_address"
                tools:text="B4, Prabha Anand Sankul, Stadium Road, Nashik - 422101"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_po"
            android:text="@string/payment_option"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/linearlayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_payment_option"
            tools:text="Cash On Delivery"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/linearlayout"
            app:layout_constraintStart_toEndOf="@id/text_po"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:text="@string/confirm_amp_place_order"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/text_payment_option"
            android:textColor="@color/white"
            android:backgroundTint="@color/main_sky_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>